# minbin

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  pylint.yml
app/: config.py  main.py
app/utils/: db.py  other.py
templates/: 404.html  index.html  paste.html
templates/assets/css/: Funnel Sans.css  Geist Mono.css  styles.css
